fix jump pad styles and links

--- a/styles.css
+++ b/styles.css
@@ -270,9 +270,15 @@ h1, h2, h3, h4, h5, h6, p {
     background-color: var(--secondary);
     top: 82px;
     position: sticky;
-    padding: 8px;
+}
+
+.jump-pad-container {
+    max-width: var(--content-width);
     display: flex;
     justify-content: space-around;
+    padding: 8px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .jump-pad a {
